# backtester

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
backtester/: __init__.py  accounting.py  analytics.py  attribution.py  cv.py  execution.py  execution_engine.py  objectives.py  optimizers.py  result.py  runner.py  statistical.py  walkforward.py
docs/: architecture.md  development.md  index.md
docs/api/: index.md
docs/guides/: integration.md
examples/: execution_walkforward_synthetic.py
tests/: test_accounting.py  test_analytics.py  test_attribution.py  test_cv.py  test_examples.py  test_execution.py  test_execution_engine.py  test_objectives.py  test_optimizers.py  test_runner.py  test_statistical.py  test_walkforward.py
