[build-system]
requires = ["setuptools>=68,<77", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtester"
dynamic = ["version"]
description = "Production backtesting framework for systematic strategies"
requires-python = ">=3.10"
authors = [{ name = "steveya" }]
dependencies = [
    "alphaforge @ git+https://github.com/steveya/alphaforge.git",
    "numpy>=1.23",
    "pandas>=2.0",
]

[project.optional-dependencies]
bayesian = ["optuna>=3.0"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
stats = ["scipy>=1.11"]
all = ["backtester[bayesian,stats]"]
dev = [
    "backtester[all,docs]",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["backtester"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=backtester --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["backtester"]
